# cattle_weight_predictor

./: .gitignore  README.md  pyproject.toml
src/constants/: constants.py
src/segmentation_model/: generate_masks.py  iou.py  results.py  train.py  tune.py  validate.py
src/segmentation_model/dataset_builder/: configure_split.py  count_instances.py  create_dataset_train_test_split.py  create_label_files.py  resize_rgb.py
src/utils/: utils.py
src/weight_model/: classic_regression_run.py  classic_run_config.py  custom_model.py  data_profile.py  depth_masks.py  k_fold_builder.py  mask_mappings.py  metrics.py  pretrained_cnn.py  regression_run.py  results.py  run_config.py  svr.py  svr_regression_run.py  svr_run_config.py  view_data_aug.py
