[project]
name = "cattle_weight_predictor"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "tam-debug"}
]
dependencies = [
    "ultralytics>=8.2.78",
    "pycocotools>=2.0.8",
]
requires-python = "==3.11.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
